[package]
name = "dirty"
version = "0.2.0"
authors = ["Tom Burdick <thomas.burdick@gmail.com>"]
description = "Holds a value with a dirty flag which is set on writes and cleared on clear()"
documentation = "https://bfrog.github.io/dirty"
homepage = "https://github.com/bfrog/dirty"
repository = "https://github.com/bfrog/dirty"
readme = "README.md"
keywords = ["dirty"]
license = "Apache-2.0"
